--- a/server/style.css
+++ b/server/style.css
@@ -1,35 +1,65 @@
 h1 {
     text-align: center;
 }
+
 body {
     width: max-content;
     width: 300px;
     height: 300px;
 }
+
+.actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 button {
     background-color: red;
-    color: pink;
+    color: whitesmoke;
     border-radius: 10px;
     width: max-content;
     height: max-content;
     padding: 10px;
     font-size: large;
-    margin: auto;
-    display: block;
+    margin-right: 10px;
+    display: inline-block;
     border-color: pink;
 }
-button[disabled] {
-    background-color: gray;
-    color: white;
-    border-radius: 8px;
+
+#refresh-btn {
+    color: red;
+    border-radius: 10px;
     width: max-content;
     height: max-content;
-    padding: 10px;
+    padding: 3px;
     font-size: large;
-    margin: auto;
-    display: block;
-    border-color: lightpink;
+    margin-right: 10px; /* Add margin-right to create space between the buttons */
+    display: inline-block;
+    border-color: pink;
+  }
+  
+#copy-btn {
+    color: red;
+    border-radius: 10px;
+    width: max-content;
+    height: max-content;
+    padding: 3px;
+    font-size: large;
+    display: inline-block;
+    border-color: pink;
+  }
+  
+
+.material-icons {
+    font-family: "Material Icons";
+    font-size: 24px;
+    color: pink;
+    cursor: pointer;
 }
+
 p {
     font-size: medium;
 }
+
+
